unpackaged/main/default/objects/SBQQ__Quote__c/fields/Adresse_de_livraison__c.field-meta.xml
<CustomField>
    <fullName>Adresse_de_livraison__c</fullName>
    <inlineHelpText>Obligatoire - Merci de renseigner le code postal et ville de livraison</inlineHelpText>
    <label>Adresse de livraison *</label>
    <type>TextArea</type>
</CustomField>