unpackaged/main/default/objects/SBQQ__Quote__c/fields/Agence_PF__c.field-meta.xml
<CustomField>
    <fullName>Agence_PF__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Agence PF de l&#39;opportunité</description>
    <label>Agence PF</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Le compte doit être de type Agence</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Agence PF</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Devis (Agence PF)</relationshipLabel>
    <relationshipName>Agence_Devis</relationshipName>
    <type>Lookup</type>
</CustomField>