unpackaged/main/default/objects/SBQQ__Quote__c/fields/Aggregated_Caution_Months__c.field-meta.xml
<CustomField>
    <fullName>Aggregated_Caution_Months__c</fullName>
    <formula>Case(
				Type_de_location__c,
				&quot;Moyenne Durée&quot;,
				IF( 
				text(Dpt_garantie__c) = &quot;Dispensé&quot;,
				0,
				IF(
								text(Dpt_garantie__c) =&quot;Autres&quot;,
								Si_autres_precisez__c,
								Value(text(Dpt_garantie__c))
								)
				),
				&quot;Longue Durée&quot;,
				IF( 
				text(Mois_caution__c) = &quot;Dispensé&quot;,
				0,
				IF(
								text(Mois_caution__c) =&#39;Autres&#39;,
								Si_autres_precisez__c,
								Value(text(Mois_caution__c))
								)
				),
				0
				)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mois de caution à facturer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>