unpackaged/main/default/objects/SBQQ__Quote__c/fields/Approval_Image__c.field-meta.xml
<CustomField>
    <fullName>Approval_Image__c</fullName>
    <formula>IF(
				Rollup_Discount_QLG_Manager__c &gt;=1,
				IMAGE(&quot;/resource/1649153114000/CircleRed&quot;, &quot;Red&quot; , 20, 20) &amp;&quot; &quot;&amp; &quot;Approbation Directeur&quot;,
				IF(
								 Approval_required__c = TRUE,
								IMAGE(&quot;/resource/1649153081000/CircleOrange?&quot;, &quot;Orange&quot; , 20, 20) &amp;&quot; &quot;&amp; &quot;Approbation Manager&quot;,
								IMAGE(&quot;/resource/1649153059000/CircleGreen?&quot;, &quot;Orange&quot; , 20, 20) &amp;&quot; &quot;&amp; &quot;Pas d&#39;approbation&quot;
								
								
				))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approbation</label>
    <type>Text</type>
</CustomField>