unpackaged/main/default/objects/SBQQ__Quote__c/fields/Autres_observations__c.field-meta.xml
<CustomField>
    <fullName>Autres_observations__c</fullName>
    <label>Autres observations :</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>