unpackaged/main/default/objects/SBQQ__Quote__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <description>Use in product rule to hide/show product</description>
    <formula>TEXT(SalesAreaData__r.SalesArea__r.Brand__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marque</label>
    <type>Text</type>
</CustomField>