unpackaged/main/default/objects/SBQQ__Quote__c/fields/Cal__c.field-meta.xml
<CustomField>
    <fullName>Cal__c</fullName>
    <label>Hauteur calage à prévoir (en cm)</label>
    <type>TextArea</type>
</CustomField>