unpackaged/main/default/objects/SBQQ__Quote__c/fields/CapacityEP__c.field-meta.xml
<CustomField>
    <fullName>CapacityEP__c</fullName>
    <label>Capacité (en Euro-Palette)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Euro_Palette_Capacity</valueSetName>
    </valueSet>
</CustomField>