unpackaged/main/default/objects/SBQQ__Quote__c/fields/Champs_obligatoires__c.field-meta.xml
<CustomField>
    <fullName>Champs_obligatoires__c</fullName>
    <defaultValue>&quot;Champs obligatoires&quot;</defaultValue>
    <label>* Champs obligatoires</label>
    <length>255</length>
    <type>Text</type>
</CustomField>