unpackaged/main/default/objects/SBQQ__Quote__c/fields/Coeff__c.field-meta.xml
<CustomField>
    <fullName>Coeff__c</fullName>
    <label>Coeff</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>