unpackaged/main/default/objects/SBQQ__Quote__c/fields/Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone__c</fullName>
    <label>Téléphone du contact</label>
    <type>TextArea</type>
</CustomField>