unpackaged/main/default/objects/SBQQ__Quote__c/fields/Contact_sur_site__c.field-meta.xml
<CustomField>
    <fullName>Contact_sur_site__c</fullName>
    <inlineHelpText>Obligatoire</inlineHelpText>
    <label>Contact sur site Nom/Tel/Email *</label>
    <type>TextArea</type>
</CustomField>