unpackaged/main/default/objects/SBQQ__Quote__c/fields/Contraintes__c.field-meta.xml
<CustomField>
    <fullName>Contraintes__c</fullName>
    <label>Contraintes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>