unpackaged/main/default/objects/SBQQ__Quote__c/fields/Contraintes_client__c.field-meta.xml
<CustomField>
    <fullName>Contraintes_client__c</fullName>
    <label>Contraintes client</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>