unpackaged/main/default/objects/SBQQ__Quote__c/fields/Contraintes_techniques__c.field-meta.xml
<CustomField>
    <fullName>Contraintes_techniques__c</fullName>
    <label>Contraintes techniques</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>