unpackaged/main/default/objects/SBQQ__Quote__c/fields/Count_Recalculation_group_required__c.field-meta.xml
<CustomField>
    <fullName>Count_Recalculation_group_required__c</fullName>
    <label>Count Recalculation group required</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLineGroup__c.Tech_required_update__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLineGroup__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>