unpackaged/main/default/objects/SBQQ__Quote__c/fields/Delai_de_livraison__c.field-meta.xml
<CustomField>
    <fullName>Delai_de_livraison__c</fullName>
    <inlineHelpText>En semaines à réception du contrat et du plan signé.</inlineHelpText>
    <label>Délai de livraison</label>
    <length>150</length>
    <type>Text</type>
</CustomField>