unpackaged/main/default/objects/SBQQ__Quote__c/fields/Demande_tarification_assemblage__c.field-meta.xml
<CustomField>
    <fullName>Demande_tarification_assemblage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demande tarification assemblage</label>
    <type>Checkbox</type>
</CustomField>