unpackaged/main/default/objects/SBQQ__Quote__c/fields/Duree_de_location_souhaite_e__c.field-meta.xml
<CustomField>
    <fullName>Duree_de_location_souhaite_e__c</fullName>
    <label>Durée de location souhaitée</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>