unpackaged/main/default/objects/SBQQ__Quote__c/fields/Duree_Location_Ass__c.field-meta.xml
<CustomField>
    <fullName>Duree_Location_Ass__c</fullName>
    <inlineHelpText>Obligatoire - Pour sélectionner plusieurs durées, cliquez sur CTRL+ Clic droit de votre souris</inlineHelpText>
    <label>Durée Location (CTRL + clic) *</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2 ans</fullName>
            </value>
            <value>
                <fullName>3 ans</fullName>
            </value>
            <value>
                <fullName>4 ans</fullName>
            </value>
            <value>
                <fullName>5 ans</fullName>
                <default>true</default>
                <label>5 ans</label>
            </value>
            <value>
                <fullName>24 mois</fullName>
                <isActive>false</isActive>
                <label>24 mois</label>
            </value>
            <value>
                <fullName>36 mois</fullName>
                <isActive>false</isActive>
                <label>36 mois</label>
            </value>
            <value>
                <fullName>48 mois</fullName>
                <isActive>false</isActive>
                <label>48 mois</label>
            </value>
            <value>
                <fullName>60 mois</fullName>
                <isActive>false</isActive>
                <label>60 mois</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>