unpackaged/main/default/objects/SBQQ__Quote__c/fields/Duree_location_Mois__c.field-meta.xml
<CustomField>
    <fullName>Duree_location_Mois__c</fullName>
    <formula>Location__c /365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Durée location (Mois)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>