unpackaged/main/default/objects/SBQQ__Quote__c/fields/Email_Contact__c.field-meta.xml
<CustomField>
    <fullName>Email_Contact__c</fullName>
    <formula>SBQQ__Opportunity2__r.Contact_sur_Site__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Contact</label>
    <type>Text</type>
</CustomField>