unpackaged/main/default/objects/SBQQ__Quote__c/fields/Est_un_grand_compte__c.field-meta.xml
<CustomField>
    <fullName>Est_un_grand_compte__c</fullName>
    <formula>SBQQ__Account__r.Est_un_grand_compte__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Key Account</label>
    <type>Checkbox</type>
</CustomField>