unpackaged/main/default/objects/SBQQ__Quote__c/fields/Etat__c.field-meta.xml
<CustomField>
    <fullName>Etat__c</fullName>
    <formula>if
(
CONTAINS(RecordType.DeveloperName, &#39;Read_Only&#39;)
,
IMAGE(&quot;/resource/1553031783000/Opp_ClosedLock?&quot;,&quot;Closed&quot;,35,35)

,
null


)</formula>
    <label>Etat</label>
    <type>Text</type>
</CustomField>