unpackaged/main/default/objects/SBQQ__Quote__c/fields/Ext_rieur__c.field-meta.xml
<CustomField>
    <fullName>Ext_rieur__c</fullName>
    <label>Extérieur</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Au sol</fullName>
            </value>
            <value>
                <fullName>A quai</fullName>
            </value>
            <value>
                <fullName>Calage</fullName>
            </value>
            <value>
                <fullName>Type Terrain</fullName>
            </value>
            <value>
                <fullName>Distance Roulage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>