unpackaged/main/default/objects/SBQQ__Quote__c/fields/Financial_Conditions_Account__c.field-meta.xml
<CustomField>
    <fullName>Financial_Conditions_Account__c</fullName>
    <formula>CASESAFEID(if( Isblank(SBQQ__Account__r.UltimateAccount__c), SBQQ__Account__c, SBQQ__Account__r.UltimateAccount__c))</formula>
    <label>Compte de gestion</label>
    <type>Text</type>
</CustomField>