unpackaged/main/default/objects/SBQQ__Quote__c/fields/Hauteur_Bequilles__c.field-meta.xml
<CustomField>
    <fullName>Hauteur_Bequilles__c</fullName>
    <label>Hauteur Béquilles</label>
    <type>TextArea</type>
</CustomField>