unpackaged/main/default/objects/SBQQ__Quote__c/fields/HeaderFieldSetName__c.field-meta.xml
<CustomField>
    <fullName>HeaderFieldSetName__c</fullName>
    <label>HeaderFieldSetName</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard Quote</fullName>
                <default>true</default>
                <label>Standard Quote</label>
            </value>
            <value>
                <fullName>Detailed Standard Quote</fullName>
            </value>
            <value>
                <fullName>AssemblyFS</fullName>
            </value>
            <value>
                <fullName>Hors_standard_Quote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>