unpackaged/main/default/objects/SBQQ__Quote__c/fields/Horaire_de_livraison_travail__c.field-meta.xml
<CustomField>
    <fullName>Horaire_de_livraison_travail__c</fullName>
    <inlineHelpText>Obligatoire</inlineHelpText>
    <label>Horaire de livraison/travail *</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>