unpackaged/main/default/objects/SBQQ__Quote__c/fields/Indexation__c.field-meta.xml
<CustomField>
    <fullName>Indexation__c</fullName>
    <label>Indexation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Indexation</valueSetName>
    </valueSet>
</CustomField>