unpackaged/main/default/objects/SBQQ__Quote__c/fields/Information_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Information_Sheet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Information Sheet</label>
    <referenceTo>Information_Sheet__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>