unpackaged/main/default/objects/SBQQ__Quote__c/fields/Information_Sheet_Type__c.field-meta.xml
<CustomField>
    <fullName>Information_Sheet_Type__c</fullName>
    <label>Information Sheet Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Assembly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>