unpackaged/main/default/objects/SBQQ__Quote__c/fields/Informations_complementaires__c.field-meta.xml
<CustomField>
    <fullName>Informations_complementaires__c</fullName>
    <label>Informations complémentaires</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>