unpackaged/main/default/objects/SBQQ__Quote__c/fields/Int_rieur__c.field-meta.xml
<CustomField>
    <fullName>Int_rieur__c</fullName>
    <label>Intérieur</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hauteur Hangar</fullName>
            </value>
            <value>
                <fullName>Type sol</fullName>
            </value>
            <value>
                <fullName>Bouche égouts (ou autres)</fullName>
            </value>
            <value>
                <fullName>Distance Roulage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>