unpackaged/main/default/objects/SBQQ__Quote__c/fields/IS_Calage_Tech__c.field-meta.xml
<CustomField>
    <fullName>IS_Calage_Tech__c</fullName>
    <formula>text(Information_Sheet__r.Prevoir_un_Calage__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IS Calage Tech</label>
    <type>Text</type>
</CustomField>