unpackaged/main/default/objects/SBQQ__Quote__c/fields/IS_Positionnement_Tech__c.field-meta.xml
<CustomField>
    <fullName>IS_Positionnement_Tech__c</fullName>
    <formula>text(Information_Sheet__r.Installation_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IS Positionnement Tech</label>
    <type>Text</type>
</CustomField>