unpackaged/main/default/objects/SBQQ__Quote__c/fields/IS_Status__c.field-meta.xml
<CustomField>
    <fullName>IS_Status__c</fullName>
    <formula>TEXT(Information_Sheet__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IS Status</label>
    <type>Text</type>
</CustomField>