unpackaged/main/default/objects/SBQQ__Quote__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Nombre de jours de location</description>
    <formula>(SBQQ__EndDate__c - SBQQ__StartDate__c)+1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location (jours)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>