unpackaged/main/default/objects/SBQQ__Quote__c/fields/Mode_reglement__c.field-meta.xml
<CustomField>
    <fullName>Mode_reglement__c</fullName>
    <label>Mode de règlement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Mode_reglement</valueSetName>
    </valueSet>
</CustomField>