unpackaged/main/default/objects/SBQQ__Quote__c/fields/Mois_caution__c.field-meta.xml
<CustomField>
    <fullName>Mois_caution__c</fullName>
    <label>Mois de caution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Mois_caution</valueSetName>
    </valueSet>
</CustomField>