unpackaged/main/default/objects/SBQQ__Quote__c/fields/Montant_remise_pied_de_facture__c.field-meta.xml
<CustomField>
    <fullName>Montant_remise_pied_de_facture__c</fullName>
    <formula>SBQQ__Account__r.UltimateAccount__r.Montant_remise_pied_de_facture__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>non pris en compte dans le calcul des montants affichés</inlineHelpText>
    <label>Montant remise pied de facture (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>