unpackaged/main/default/objects/SBQQ__Quote__c/fields/Motif_du_refus__c.field-meta.xml
<CustomField>
    <fullName>Motif_du_refus__c</fullName>
    <label>Motif du refus</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Statut_de_la_demande__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Privilégier un Devis Standard</fullName>
            </value>
            <value>
                <fullName>Privilégier un Devis Assemblage</fullName>
            </value>
            <value>
                <fullName>Devis techniquement impossible à réaliser</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>