unpackaged/main/default/objects/SBQQ__Quote__c/fields/Nature_poids__c.field-meta.xml
<CustomField>
    <fullName>Nature_poids__c</fullName>
    <inlineHelpText>Obligatoire</inlineHelpText>
    <label>Nature, poids et hauteur des produits  *</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>