unpackaged/main/default/objects/SBQQ__Quote__c/fields/Need_Information_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Need_Information_Sheet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Need Information Sheet</label>
    <type>Checkbox</type>
</CustomField>