unpackaged/main/default/objects/SBQQ__Quote__c/fields/Number_of_Information_Sheets__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Information_Sheets__c</fullName>
    <label>Number of Information Sheets</label>
    <summaryForeignKey>Information_Sheet__c.Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>