unpackaged/main/default/objects/SBQQ__Quote__c/fields/Opportunity_type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_type__c</fullName>
    <formula>text(  SBQQ__Opportunity2__r.TypeOpportunite__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity type</label>
    <type>Text</type>
</CustomField>