unpackaged/main/default/objects/SBQQ__Quote__c/fields/PaysRegionPF__c.field-meta.xml
<CustomField>
    <fullName>PaysRegionPF__c</fullName>
    <description>GFC-1687</description>
    <formula>text(SBQQ__Opportunity2__r.PaysRegionPF__c)</formula>
    <label>PaysRegionPF</label>
    <type>Text</type>
</CustomField>