unpackaged/main/default/objects/SBQQ__Quote__c/fields/Plan_prevention__c.field-meta.xml
<CustomField>
    <fullName>Plan_prevention__c</fullName>
    <inlineHelpText>Obligatoire</inlineHelpText>
    <label>Plan de prévention *</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>