unpackaged/main/default/objects/SBQQ__Quote__c/fields/Prix_definis__c.field-meta.xml
<CustomField>
    <fullName>Prix_definis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prix définis</label>
    <type>Checkbox</type>
</CustomField>