unpackaged/main/default/objects/SBQQ__Quote__c/fields/Process_Input__c.field-meta.xml
<CustomField>
    <fullName>Process_Input__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Process Input</label>
    <referenceTo>SBQQ__ProcessInput__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>