unpackaged/main/default/objects/SBQQ__Quote__c/fields/Produits_sensibles__c.field-meta.xml
<CustomField>
    <fullName>Produits_sensibles__c</fullName>
    <label>Produits sensibles</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>