unpackaged/main/default/objects/SBQQ__Quote__c/fields/Quai__c.field-meta.xml
<CustomField>
    <fullName>Quai__c</fullName>
    <label>Quai</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sur Béquilles</fullName>
            </value>
            <value>
                <fullName>Sur Gueuses</fullName>
            </value>
            <value>
                <fullName>Longrine Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>