unpackaged/main/default/objects/SBQQ__Quote__c/fields/Quantites_souhaitees__c.field-meta.xml
<CustomField>
    <fullName>Quantites_souhaitees__c</fullName>
    <label>Quantités souhaitées</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>