unpackaged/main/default/objects/SBQQ__Quote__c/fields/Quote_Type__c.field-meta.xml
<CustomField>
    <fullName>Quote_Type__c</fullName>
    <description>Type de la quote (assembly, standard, detailled standard)</description>
    <label>Quote Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard Quote</fullName>
            </value>
            <value>
                <fullName>Non Standard Quote</fullName>
            </value>
            <value>
                <fullName>Assembly Quote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>