unpackaged/main/default/objects/SBQQ__Quote__c/fields/R_glementations__c.field-meta.xml
<CustomField>
    <fullName>R_glementations__c</fullName>
    <label>Réglementations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aucun</fullName>
                <default>true</default>
                <label>Aucun</label>
            </value>
            <value>
                <fullName>GDP (Pharma)</fullName>
            </value>
            <value>
                <fullName>Hs SP (?)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>