unpackaged/main/default/objects/SBQQ__Quote__c/fields/Recalcul_ligne_de_devis__c.field-meta.xml
<CustomField>
    <fullName>Recalcul_ligne_de_devis__c</fullName>
    <formula>IF(
  AND(
    quote_line_items__c,
    OR(
      AND(
        ISPICKVAL(Mois_caution__c, &quot;Dispensé&quot;),
        ISPICKVAL(SBQQ__Status__c, &quot;Approuvé&quot;)
      ),
      AND(
        ISPICKVAL(Dpt_garantie__c, &quot;Dispensé&quot;),
        ISPICKVAL(SBQQ__Status__c, &quot;Approuvé&quot;)
      ),
      AND(
        ISPICKVAL(Paiement_en_avance__c, &quot;0%&quot;),
        ISPICKVAL(SBQQ__Status__c, &quot;Approuvé&quot;)
      )
    )
  ),
  true,
  false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recalcul ligne de devis</label>
    <type>Checkbox</type>
</CustomField>