unpackaged/main/default/objects/SBQQ__Quote__c/fields/RMMW_Prefixes_ID__c.field-meta.xml
<CustomField>
    <fullName>RMMW_Prefixes_ID__c</fullName>
    <label>RMMW Préfixes – ID</label>
    <type>TextArea</type>
</CustomField>