unpackaged/main/default/objects/SBQQ__Quote__c/fields/Rollup_Discount_QLG__c.field-meta.xml
<CustomField>
    <fullName>Rollup_Discount_QLG__c</fullName>
    <label>Rollup Discount QLG</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLineGroup__c.QLGAverageCustomerDiscount__c</field>
        <operation>greaterThan</operation>
        <value>5</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>SBQQ__QuoteLineGroup__c.QLGAverageCustomerDiscount__c</field>
        <operation>lessOrEqual</operation>
        <value>10</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLineGroup__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>