unpackaged/main/default/objects/SBQQ__Quote__c/fields/Rollup_Discount_QLG_Manager__c.field-meta.xml
<CustomField>
    <fullName>Rollup_Discount_QLG_Manager__c</fullName>
    <description>Rollup technique pour approval process des discounts supérieurs à 10%.</description>
    <label>Rollup Discount QLG Manager</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLineGroup__c.QLGAverageCustomerDiscount__c</field>
        <operation>greaterThan</operation>
        <value>10</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLineGroup__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>