unpackaged/main/default/objects/SBQQ__Quote__c/fields/SalesAreaData__c.field-meta.xml
<CustomField>
    <fullName>SalesAreaData__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Vue commerciale client sur laquelle le devis a été créé.</description>
    <label>Vue Commerciale Client</label>
    <referenceTo>SalesAreaData__c</referenceTo>
    <relationshipLabel>Devis CPQ</relationshipLabel>
    <relationshipName>QuotesCPQ</relationshipName>
    <type>Lookup</type>
</CustomField>