unpackaged/main/default/objects/SBQQ__Quote__c/fields/Saved_Quote_Line_Groups__c.field-meta.xml
<CustomField>
    <fullName>Saved_Quote_Line_Groups__c</fullName>
    <label>Saved Quote Line Groups</label>
    <summaryForeignKey>SBQQ__QuoteLineGroup__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>