unpackaged/main/default/objects/SBQQ__Quote__c/fields/SBQQ__Account__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The customer account for this quote. Defaulted to the account for the opportunity when quote is created.</description>
    <inlineHelpText>Le compte client de ce devis. Utilise par défaut le compte de l&#39;opportunité lors de la création d&#39;un devis.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>